--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
         go-version: '1.22.x'
 
     - name: Build
-      run: go build -v ./...
+      run: go install templ && templ generate && go build -v ./...
 
     - name: Test
       run: go test -v ./...
