--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
         go-version: '1.22.x'
 
     - name: Build
-      run: go get . && go install github.com/a-h/templ/cmd/templ@latest && templ generate && go build -v ./...
+      run: go install github.com/a-h/templ/cmd/templ@latest && templ generate && go build -v ./...
 
     - name: Test
       run: go test -v ./...
