--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build windows
         run: env GOOS=windows GOARCH=amd64 go build -o just-windows-amd64.exe && env GOOS=windows GOARCH=386 go build -o just-windows-386.exe
 
+      - name: Build MacOS
+        run: env GOOS=darwin GOARCH=amd64 go build -o just-macos-amd64 && env GOOS=windows GOARCH=arm64 go build -o just-macos-arm64
+
       - name: Upload the artifacts
         uses: skx/github-action-publish-binaries@master
         env:
